Make hash returned by Hash#transform_values not have a default

This sets an explicit default of nil.  There is probably a better
approach of removing the default.

Fixes [Bug #17181]